package protobee;

//The import fails so I put all in one file

message Message {
	enum Type {
		SERVER      = 0;
		SYSTEM_INFO = 1;
	}
	required Type type              = 1;
	optional Server server          = 2;
	optional SystemInfo system_info = 3;
}

// Measures


message Server {
	required string hostname        = 1;
	required string label           = 2;
    repeated Connection connections = 3;
}



message Connection {
    required string	transport 		= 1;
	required string local_address  	= 2;
	required uint32 local_port     	= 3;
	required string remote_address 	= 4;
	required uint32 remote_port 	= 5;   
	required uint32 pid         	= 6;
	required string name 			= 7;
}



// System Info


message SystemInfo {
	required Cpu cpu = 1;
	repeated FileSystem file_systems = 2;
	required Memory memory = 3;
	repeated Network networks = 4;
	required Platform platform = 5;
}

message Cpu {
	required uint32 cpu_cores =1;
	required uint32 family =2;
	required uint32 mhz =3;
	required uint32 model =4;
	required string model_name=5;
	required uint32 stepping =6;
	required string vendor_id =7;
}

message FileSystem {
	required uint32 kb_size =1;
	required string mounted_on =2;
	required string name =3;	
}

message Memory{
	required string swap_total = 1; //change type
	required uint32 total = 2;
}

message Network{
	required string mac_address = 1;
	required string ip_address = 2;
	required string ip_address_v6 = 3;
}

message Platform{
	required string hostname =1;
	required string kernel_name = 2;
	required string kernel_release = 3;
	required string machine =4;
	required string processor = 5;
	required string os = 6;
}